--- a/demo/index.html
+++ b/demo/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Stub Demo - X-Tag</title>
+    <title>X-Meme Demo</title>
     <link rel="stylesheet" type="text/css" href="x-tag-components.css"/>
 	<link rel="stylesheet" type="text/css" href="../src/main.css"/>
 
-    <script type="text/javascript" src="x-tag-components.js"></script> 
-    <script type="text/javascript" src="../src/main.js"></script>      
+    <script type="text/javascript" src="x-tag-components.js"></script>
+    <script type="text/javascript" src="../src/main.js"></script>
 	<style>
 
 	</style>
@@ -16,8 +16,12 @@
 
 <body>
 
-	<h2>Create a Demo</h2>
+	<h2>X-Meme Demo</h2>
 
+    <x-meme type="futurama-fry">
+        <p>can't tell if satire</p>
+        <p>or election year</p>
+    </x-meme>
 
 </body>
 
