Semantic header/footer and attribute/property support

--- a/demo/index.html
+++ b/demo/index.html
@@ -18,9 +18,7 @@
 
 	<h2>X-Meme Demo</h2>
 
-    <x-meme type="futurama-fry">
-        <p>can't tell if satire</p>
-        <p>or election year</p>
+    <x-meme type="futurama-fry" header="can't tell if satire" footer="or election year">
     </x-meme>
 
 </body>
