--- a/demo/index.html
+++ b/demo/index.html
@@ -18,8 +18,9 @@
 
 	<h2>X-Meme Demo</h2>
 
-    <x-meme type="futurama-fry" header="can't tell if satire" footer="or election year">
-    </x-meme>
+    <x-meme type="futurama-fry" header="can't tell if satire" footer="or election year"></x-meme>
+
+    <x-meme type="firstworldproblems" header="my ocean view is blocked" footer="by my yacht"></x-meme>
 
 </body>
 
