Two more memes.

--- a/demo/index.html
+++ b/demo/index.html
@@ -22,6 +22,9 @@
 
     <x-meme type="firstworldproblems" header="my ocean view is blocked" footer="by my yacht"></x-meme>
 
+    <x-meme type="scumbagsteve" header="don't worry bro, I'll pay you back" footer="next week"></x-meme>
+
+    <x-meme type="successkid" header="left late for work" footer="all green lights"></x-meme>
 </body>
 
 </html>
