hyphenate all meme names

--- a/demo/index.html
+++ b/demo/index.html
@@ -18,19 +18,19 @@
 
 	<h2>X-Meme Demo</h2>
 
-    <x-meme type="badluckbrian" header="has one night stand" footer="knocks it over"></x-meme>
+    <x-meme type="bad-luck-brian" header="has one night stand" footer="knocks it over"></x-meme>
 
     <x-meme type="condescending-wonka" header="the teacher took your phone?" footer="tell me more how your life is over"></x-meme>
 
     <x-meme type="futurama-fry" header="can't tell if satire" footer="or election year"></x-meme>
 
-    <x-meme type="firstworldproblems" header="my ocean view is blocked" footer="by my yacht"></x-meme>
+    <x-meme type="first-world-problems" header="my ocean view is blocked" footer="by my yacht"></x-meme>
 
     <x-meme type="overly-manly-man" header="the brake?" footer="I think you mean the coward pedal"></x-meme>
 
-    <x-meme type="scumbagsteve" header="don't worry bro, I'll pay you back" footer="next week"></x-meme>
+    <x-meme type="scumbag-steve" header="don't worry bro, I'll pay you back" footer="next week"></x-meme>
 
-    <x-meme type="successkid" header="left late for work" footer="all green lights"></x-meme>
+    <x-meme type="success-kid" header="left late for work" footer="all green lights"></x-meme>
 </body>
 
 </html>
