Enable custom meme image. Fix #4.

--- a/demo/index.html
+++ b/demo/index.html
@@ -31,6 +31,8 @@
     <x-meme type="scumbag-steve" header="don't worry bro, I'll pay you back" footer="next week"></x-meme>
 
     <x-meme type="success-kid" header="left late for work" footer="all green lights"></x-meme>
+
+    <x-meme type="custom" src="http://fwenzel.github.io/x-meme/img/custom-example.jpg" header="a custom meme" footer="how original"></x-meme>
 </body>
 
 </html>
