Enable animated gifs

--- a/demo/index.html
+++ b/demo/index.html
@@ -26,6 +26,8 @@
 
     <x-meme type="first-world-problems" header="my ocean view is blocked" footer="by my yacht"></x-meme>
 
+    <x-meme type="homer-simpson-bush" footer="they're talking politics"></x-meme>
+
     <x-meme type="overly-manly-man" header="the brake?" footer="I think you mean the coward pedal"></x-meme>
 
     <x-meme type="scumbag-steve" header="don't worry bro, I'll pay you back" footer="next week"></x-meme>
